--- a/es/licencias/epub.yml
+++ b/es/licencias/epub.yml
@@ -13,7 +13,7 @@ text: |
   En muchos casos el uso de una fuente en libros electrónicos está incluido en las licencia de escritorio, ya que se considera similar a la incrustación en documentos PDF. El rango de precios en ePub sigue siendo amplio y, aunque la muestra es más pequeña que la de aplicaciones, la tendencia presenta un coste más bajo.
 
 chart:
-  title: Unidades de medida en licencias ePub
+  title: Unidades de medida das licencias ePub
   key: ePub
 
 chart_tiers:
