--- a/es/licencias/publicidad-digital.yml
+++ b/es/licencias/publicidad-digital.yml
@@ -17,5 +17,5 @@ chart:
   key: digital-ads
 
 pricing:
-  title: Precios en licencias de publicidad digital
+  title: Precios de licencias de publicidad digital
   key: digital-ads-pricing
