--- a/gl/_data.yml
+++ b/gl/_data.yml
@@ -3,5 +3,5 @@ lang: gl
 language_name: Galego
 metas:
   title: "=title"
-  description: Investigación independente sobre licencias tipográficas
+  description: Investigación independente sobre licenzas tipográficas
   icon: "/apple-touch-icon.png"
