--- a/gl/licenzas/corporativa.yml
+++ b/gl/licenzas/corporativa.yml
@@ -5,17 +5,17 @@ extra: licence
 order: 3h
 content:
   first: |
-    Esta licenza está pensada para usar as fontes en múltiples formatos e medios. É para empresas, marcas e organizacións que queren cubrir unha variedade de usos, dende documentos impresos ata sitios web, aplicacións ou publicidade.
+    Esta licenza está pensada para usar as fontes en múltiples formatos e medios. É para empresas, marcas e organizacións que queren cubrir unha variedade de usos, desde documentos impresos ata sitios web, aplicacións ou publicidade.
   more: |
-    A diferenza doutras licenzas, normalmente permite dispositivos e usuarios ilimitados dentro da organización. Algunhas establecen o prezo segundo o número de empregados, e outras non especifican ningún límite no proceso de compra, establecendo as restricións nas súas EULAs.
+    A diferenza doutras licenzas, normalmente permite dispositivos e usuarios ilimitados dentro da organización. Algunhas establecen o prezo segundo o número de empregados, e outras non especifican ningún límite no proceso de compra e establecen as restricións nas súas EULA.
 
 text: |
-  Mentres que as licenzas máis comúns (Desktop, Web, App, ePub) teñen prezos similares, as licenzas menos habituais amosan diferenzas significativas. A licenza corporativa presenta os prezos máis altos da mostra, xa que cobre un uso amplo das fontes. O custo medio é de 870€ para unha fonte de texto no rango máis baixo. A mostra neste caso é pequena (13), e unha das fundicións non foi incluída no gráfico de prezos porque a tarifa (8.900€) desvíase demasiado das demais.
+  As licenzas máis comúns (Desktop, Web, App, ePub) teñen prezos similares, porén, as licenzas menos habituais amosan diferenzas significativas. A licenza corporativa presenta os prezos máis altos da mostra, xa que cobre un uso amplo das fontes. O custo medio é de 870 € para unha fonte de texto no rango máis baixo. A mostra neste caso é pequena (13), e unha das fundicións non foi incluída no gráfico de prezos porque a tarifa (8.900 €) se desvía demasiado das demais.
 
 chart:
-  title: Unidades de medida en licenzas corporativas
+  title: Unidades de medida das licenzas corporativas
   key: corporate
 
 pricing:
-  title: Prezos en licenzas corporativas
+  title: Prezos das licenzas corporativas
   key: corporate-pricing
