--- a/gl/licenzas/retransmision.yml
+++ b/gl/licenzas/retransmision.yml
@@ -5,19 +5,19 @@ extra: licence
 order: 3f
 content:
   first: |
-    Esta licenza permite usar as fontes en contido audiovisual para a súa transmisión en medios de comunicación de masas, como televisión, cinema, plataformas de streaming e contido baixo demanda. Especificamente, as fontes poden empregarse en gráficos, títulos e outros elementos tipográficos en publicidade, filmes ou contido de entretemento.
+    Esta licenza permite usar as fontes en contido audiovisual para a súa transmisión en medios de comunicación de masas, como televisión, cinema, plataformas de streaming e contido so demanda. Especificamente, as fontes poden empregarse en gráficos, títulos e outros elementos tipográficos en publicidade, filmes ou contido de entretemento.
   more: |
-    A confusión aquí xorde de como e onde se distribuirán as producións de vídeo. Algunhas licenzas de retransmisión inclúen dous tipos de contido de vídeo e canles de distribución: vídeos mostrados e/ou transmitidos en medios de comunicación de masas, por unha banda, e publicidade de pago, pola outra, que tamén inclúe plataformas e formatos como redes sociais ou paneis dixitais. Algunhas fundicións diferencian o contido de retransmisión do publicitario, polo que é necesario revisar ben a EULA para coñecer os dereitos e restricións.
+    A confusión aquí xorde de como e onde se distribuirán as producións de vídeo. Algunhas licenzas de retransmisión inclúen dous tipos de contido de vídeo e canles de distribución: vídeos mostrados e/ou transmitidos en medios de comunicación de masas, por unha banda, e publicidade de pagamento, pola outra, que tamén inclúe plataformas e formatos como redes sociais ou paneis dixitais. Algunhas fundicións diferencian o contido de retransmisión do publicitario, por iso é necesario revisar ben a EULA para coñecer os dereitos e restricións.
 
 text: |
-  É interesante observar a variedade de opcións para medir as licenzas de retransmisión. Ademais do «caso de uso» (número de producións), tamén atopamos métricas que miden factores económicos ou o alcance xeográfico, como o número de países onde se verá a produción ou o orzamento do proxecto.
+  É interesante observar a variedade de opcións para medir as licenzas de retransmisión. Ademais do «caso de uso» (número de producións), tamén temos métricas que miden factores económicos ou o alcance xeográfico, como o número de países onde se verá a produción ou o orzamento do proxecto.
 
-  Hai dúas fundicións que cobran unha tarifa anual polas producións de retransmisión. Os prezos varían dende as tarifas básicas por baixo de 200€ ata algunhas das licenzas máis caras da nosa base de datos.
+  Hai dúas fundicións que cobran unha tarifa anual polas producións de retransmisión. Os prezos varían desde as tarifas básicas por baixo de 200 € ata algunhas das licenzas máis caras da nosa base de datos.
 
 chart:
-  title: Unidades de medida en licenzas de retransmisión
+  title: Unidades de medida das licenzas de retransmisión
   key: broadcasting
 
 pricing:
-  title: Prezos en licenzas de retransmisión
+  title: Prezos das licenzas de retransmisión
   key: broadcasting-pricing
