--- a/gl/recursos.yml
+++ b/gl/recursos.yml
@@ -14,9 +14,9 @@ resources:
     type: fontlicensingmess
     url: "https://www.google.com/maps/d/edit?hl=es&mid=1br9CtuDyDHGh7I0HIjcrVp6nmp3jgAo&ll=3.4954369849734235%2C0&z=2"
   - title: Outras fontes e publicacións
-    description: Colección de recursos externos, incluíndo ligazóns a artigos, enquisas, consellos legais e outros contidos relacionados con este tema.
+    description: Colección de recursos externos, que inclúe ligazóns a artigos, enquisas, consellos legais e outros contidos relacionados con este tema.
     type: url
     url: "https://www.notion.so/1d69824c60a180e2b07be5cd9bf16de0?v=1d69824c60a18116bdfa000c9277c64b&pvs=4"
 
 content: |
-  Durante o proceso de investigación, desenvolvemos este material addicional que compartimos. Pensamos que pode ser de interese para a nosa audiencia e un recurso útil para outras iniciativas.
+  Durante o proceso de investigación, desenvolvemos este material adicional que compartimos. Pensamos que pode ser de interese para a nosa audiencia e un recurso útil para outras iniciativas.
