--- a/gl/soporte.yml
+++ b/gl/soporte.yml
@@ -4,7 +4,7 @@ theme: dark
 order: 6
 layout: layouts/support.vto
 content: |
-  Se cres que esta investigación e o contido que ofrecemos é importante, hai varias formas de amosar o teu apoio. Axúdanos a seguir recollendo e actualizando as nosas bases de datos enviando información relevante. Tamén podes compartir este proxecto e os seus recursos con outras persoas e entidades. Ademais podes facer unha pequena doazón usando a ligazón a Open Collective de abaixo para axudar a cubrir os gastos do proxecto. Grazas polo teu apoio!
+  Se cres que esta investigación e o contido que ofrecemos é importante, hai varias formas de apoiares o proxecto. Axúdanos a ampliarmos e actualizarmos as nosas bases de datos enviando información relevante. Tamén podes compartir este proxecto e os seus recursos con outras persoas e entidades. Alén disto, podes facer unha pequena doazón a través da ligazón a Open Collective para cubrir os gastos desta iniciativa. Grazas polo teu apoio!
 
 links:
   - icon: opencollective
@@ -12,7 +12,7 @@ links:
     url: https://opencollective.com/font-licensing-mess
 
 form:
-  intro: Contacta con nós enchendo este formulario eou enviándonos un email a [hola@fontlicensingmess.com](mailto:hola@fontlicensingmess.com)
+  intro: Contacta connosco enchendo este formulario ou enviándonos un email a [hola@fontlicensingmess.com](mailto:hola@fontlicensingmess.com)
   email: O teu email
   name: O teu nome
   content: Cóntanos algo!
