--- a/gl/licenzas/aplicacions.yml
+++ b/gl/licenzas/aplicacions.yml
@@ -5,12 +5,12 @@ extra: licence
 order: 3c
 content:
   first: |
-    Esta licenza permite o uso de fontes dixitais en aplicacións para mostraren o contido de maneira efectiva. Na maioría dos casos, é necesario revisar a EULA para determinar se a licenza inclúe tamén as aplicacións de escritorio ou está restrinxida aos dispositivos móbiles. As fontes están incrustadas na aplicación e son cargadas na interface.
+    Esta licenza permite o uso de fontes dixitais en aplicacións para mostraren o contido de maneira efectiva. Na maioría dos casos, é necesario revisar a EULA para determinar se a licenza inclúe as aplicacións de escritorio ou está restrinxida aos dispositivos móbiles. As fontes están incrustadas na aplicación e son cargadas na interface.
   more: |
-    A licenza de aplicacións ás veces ofrécese como App/ePub ou App/Videoxogo. Como no caso das fundicións que teñen unha licenza separada para videoxogos, observamos que as métricas e prezos coinciden coa de aplicacións, engadímolas no mesmo bloque.
+    A licenza de aplicacións ás veces ofrécese conxuntamente como App/ePub ou App/Videoxogo. Como no caso das fundicións que teñen unha licenza separada para videoxogos observamos que as métricas e prezos coinciden cos de aplicacións, engadímolas neste mesmo bloque.
 
 text: |
-  Hai unha unidade de medida predominante: o número de aplicacións que inclúen a fonte. Usamos o termo xeral «caso de uso», xa que tamén é apropiado para outras licenzas. Existen outras métricas relacionadas con quen ve/le/interactúa coa aplicación (descargas e usuarios mensuais), mais neste caso a porcentaxe na mostra é menor (19%) que nas licenzas web.
+  Hai unha unidade de medida predominante: o número de aplicacións que inclúen a fonte. Usamos o termo xeral «caso de uso», xa que tamén é apropiado para outras licenzas. Existen outras métricas relacionadas con quen ve/le/interactúa coa aplicación (descargas e usuarias mensuais), mais neste caso a porcentaxe na mostra é menor (19%) que nas licenzas web.
 
   Tamén identificamos cinco fundicións que empregan o número de anos como única métrica. A mostra inclúe máis licenzas non perpetuas para aplicacións que para outros usos, con sete que cobran unha subscrición anual e oito que impoñen límites baseados no número de anos.
 
