--- a/gl/licenzas/redes-sociais.yml
+++ b/gl/licenzas/redes-sociais.yml
@@ -7,12 +7,12 @@ content:
   first: |
     Unha licenza de redes sociais permite usar a fonte dixital en contidos creados e publicados en plataformas de redes sociais, como Instagram, Facebook, TikTok e máis.
   more: |
-    A fonte pode empregarse en formatos como imaxes estáticas ou vídeos, aínda que algunhas fundicións usan unha licenza separada para o contido en vídeo. Para publicidade ou contido de pagamento, algunhas fundicións ofrecen outra licenza medida polo número de impresións.
+    A fonte pode empregarse para crear imaxes estáticas ou vídeos, aínda que algunhas fundicións usan unha licenza separada para o contido en vídeo. Para publicidade ou contido pagado, algunhas fundicións ofrecen outra licenza que mide o número de impresións.
 
 text: |
-  Como noutros casos, este uso específico adoita estar incluído nas licenzas básicas ou integrado nun paquete de licenzas. Aínda así, algunhas fundicións seguen unha estratexia diferente, que consiste en dividiren a licenza en usos máis específicos como redes sociais, logotipos ou publicidade dixital.
+  Como noutros casos, o uso en redes sociais adoita estar incluído nas licenzas básicas ou integrado nun paquete de licenzas. Aínda así, algunhas fundicións seguen unha estratexia diferente, que consiste en dividiren a licenza en usos máis específicos como redes sociais, logotipos ou publicidade dixital.
 
-  Os tramos de prezos calcúlanse principalmente polo número de seguidores ou subscritores en todas as canles de redes sociais, e comezan en 10.000. O prezo medio para unha fonte de texto —nunha mostra de 18 fundicións— é de 66 €; un pouco máis alto mais non moi afastado do prezo medio das licenzas de escritorio e web.
+  Os tramos de prezos calcúlanse principalmente polo número de seguidores ou subscritores, cun límite inicial de 10.000. O prezo medio para unha fonte de texto —nunha mostra de 18 fundicións— é de 66 €; un pouco máis alto mais non moi afastado do prezo medio das licenzas de escritorio e web.
 
 chart:
   title: Unidade de medida das licenzas de redes sociais
