--- a/gl/licenzas/logotipo.yml
+++ b/gl/licenzas/logotipo.yml
@@ -7,9 +7,9 @@ content:
   first: |
     Esta licenza está deseñada para permitir o uso dunha fonte dixital nun logotipo ou marca rexistrada. Unha vez creado, a imaxe vectorial ou bitmap do logotipo pode empregarse en calquera medio (sitios web, material impreso, embalaxe, publicidade, sinalización…).
   more: |
-    Este uso adoita estar incluído nas licenzas de escritorio. As poucas fundicións que ofrecen unha licenza de logotipo (13) miden o tamaño da compañía polo número de empregados ou solicitan «casos de uso» (número de logotipos), diferenciando ás veces entre logotipo e marcas rexistradas.
+    Este uso adoita estar incluído nas licenzas de escritorio. As poucas fundicións que ofrecen unha licenza de logotipo (13) definen o custo segundo o tamaño da compañía (número de empregadas) ou os «casos de uso» (número de logotipos), diferenciando ás veces entre logotipo e marcas rexistrada.
 
-    O prezo para unha soa fonte de texto vai desde os 29 €, o máis baixo, ata máis de 400 €.
+    O prezo para unha soa fonte de texto vai desde os 29 €, o máis baixo, ata preto dos 500 €, o máis alto.
 
 chart:
   title: Unidades de medida das licenzas de logotipo
