--- a/gl/licenzas/corporativa.yml
+++ b/gl/licenzas/corporativa.yml
@@ -7,10 +7,10 @@ content:
   first: |
     Esta licenza está pensada para usar as fontes en múltiples formatos e medios. É para empresas, marcas e organizacións que queren cubrir unha variedade de usos, desde documentos impresos ata sitios web, aplicacións ou publicidade.
   more: |
-    A diferenza doutras licenzas, normalmente permite dispositivos e usuarios ilimitados dentro da organización. Algunhas establecen o prezo segundo o número de empregados, e outras non especifican ningún límite no proceso de compra e establecen as restricións nas súas EULA.
+    A diferenza doutras licenzas, normalmente permite dispositivos e usuarias ilimitadas dentro da organización. Algunhas establecen o prezo segundo o número de persoas empregadas, e outras non especifican ningún límite no proceso de compra, polo que é necesario consultar as restricións no EULA.
 
 text: |
-  As licenzas máis comúns (Desktop, Web, App, ePub) teñen prezos similares, porén, as licenzas menos habituais amosan diferenzas significativas. A licenza corporativa presenta os prezos máis altos da mostra, xa que cobre un uso amplo das fontes. O custo medio é de 870 € para unha fonte de texto no rango máis baixo. A mostra neste caso é pequena (13), e unha das fundicións non foi incluída no gráfico de prezos porque a tarifa (8.900 €) se desvía demasiado das demais.
+  Mentres as licenzas máis comúns (Desktop, Web, App, ePub) teñen prezos similares, porén, as licenzas menos habituais amosan diferenzas significativas. A licenza corporativa presenta os prezos máis altos da mostra, xa que permite un uso amplo das fontes. O custo medio é de 870 € para unha fonte de texto no rango máis baixo. A mostra neste caso é pequena (13), e unha das fundicións non foi incluída no gráfico de prezos porque a tarifa (8.900 €) se desvía demasiado das demais.
 
 chart:
   title: Unidades de medida das licenzas corporativas
