--- a/gl/licenzas/publicidade-dixital.yml
+++ b/gl/licenzas/publicidade-dixital.yml
@@ -1,4 +1,4 @@
-title: Digital ads
+title: Publicidade dixital
 id: licences-digital-ads
 theme: light
 extra: licence
@@ -8,15 +8,15 @@ content:
     Esta licenza permite o uso das fontes dixitais en anuncios publicados en sitios web, aplicacións, ou calquera outra plataforma conectada á Internet. Inclúe báners, anuncios en vídeo e outros formatos publicitarios.
 
   more: | 
-    A maioría das métricas de licenzas para uso online (web, publicidade dixital, redes sociais) miden a audiencia, usando termos diferentes en cada caso. A unidade de medida predominante nos anuncios dixitais é o número de impresións, que poden contabilizarse por mes ou coa suma total sen prazo temporal.
+    A maioría das métricas de licenzas para uso online (web, publicidade dixital, redes sociais) miden a audiencia, usando termos diferentes en cada caso. A unidade de medida predominante nos anuncios dixitais é o número de impresións, que poden contabilizarse por mes ou pola suma total sen prazo temporal.
   
 
 text: |
-  Esta é a mostra máis pequena da nosa base de datos (11). Excluíndo as dúas fundicións que cobran unha tarifa anual, o custo medio para unha tipografía de texto é 65 €, semellante ao custo en redes sociais. Hai un caso excepcional que cobra máis de 2.000 € por publicidade dixital e redes sociais, aínda que neste caso o uso é ilimitado para cada marca. 
+  Esta é a mostra máis pequena da nosa base de datos (11). Excluíndo as dúas fundicións que cobran unha tarifa anual, o custo medio para unha tipografía de texto é 65 €, semellante ao custo en redes sociais. Hai un caso excepcional que cobra máis de 2.000 € por publicidade dixital e redes sociais, aínda que neste caso o uso é ilimitado para a marca que adquire a licenza. 
 
 
 chart:
-  title: Unidades de medida para licenzas de publicidade dixital
+  title: Unidades de medida en licenzas de publicidade dixital
   key: digital-ads
 
 pricing:
