link ao instagram

--- a/en/about-us.yml
+++ b/en/about-us.yml
@@ -5,6 +5,8 @@ theme: light
 order: 5
 content: |
   Font Licensing Mess is an independent research project born to shed some light on one of the most complex and least understood aspects of the modern type industry: font licensing.
+
+    In addition to this website, you can follow us on [![instagram](/assets/instagram.svg){inline} @fontlicensing](https://www.instagram.com/fontlicensing/).
 people:
   - img: /assets/img/equipo2.jpg
     bio: |
