--- a/es/acerca-de.yml
+++ b/es/acerca-de.yml
@@ -5,6 +5,8 @@ theme: light
 order: 5
 content: |
   Font Licensing Mess es un proyecto de investigación independiente que busca arrojar luz sobre uno de los aspectos más complejos y menos comprendidos de la industria de la tipografía en la actualidad: las licencias tipográficas.
+
+  Además de esta web, puedes seguirnos en [![instagram](/assets/instagram.svg){inline} @fontlicensing](https://www.instagram.com/fontlicensing/).
 people:
   - img: /assets/img/equipo2.jpg
     bio: |
