--- a/en/about-us.yml
+++ b/en/about-us.yml
@@ -6,7 +6,7 @@ order: 5
 content: |
   Font Licensing Mess is an independent research project born to shed some light on one of the most complex and least understood aspects of the modern type industry: font licensing.
 
-    You can also follow us on Instagram, @fontlicensing](https://www.instagram.com/fontlicensing/).
+    Outside this website, you can also follow us on Instagram [@fontlicensing](https://www.instagram.com/fontlicensing/).
 people:
   - img: /assets/img/equipo2.jpg
     bio: |
