--- a/es/licencias/corporativa.yml
+++ b/es/licencias/corporativa.yml
@@ -5,7 +5,7 @@ extra: licence
 order: 3h
 content:
   first: |
-    Esta licencia permite usar las fuentes en múltiples formatos y sorportes. Es para empresas, marcas y organizaciones que quieren cubrir un rango amplio de usos, desde documentos impresos a sitios web, aplicaciones móviles o publicidad.
+    Esta licencia permite usar las fuentes en múltiples formatos y soportes. Es para empresas, marcas y organizaciones que quieren cubrir un rango amplio de usos, desde documentos impresos a sitios web, aplicaciones móviles o publicidad.
   more: |
     A diferencia de otras licencias, a menudo permite utilizar la fuente en la organización sin limitaciones en el número de personas usuarias o dispositivos.
 
